[#10695] handle Bracket in FilterExpressionApi fix